--- a/style.css
+++ b/style.css
@@ -12,19 +12,22 @@
     justify-content: center;
     align-items: center;
 
-    width: 150px;
+    width: 10em;
     height: auto;
     margin: auto;
+    padding: 0.5em;
     border: solid black .01em;
 }
 
 .display {
-    width: 8.2em;
+    width: 10em;
     height: 5em;
-    border: solid black .01em;
-    margin: 5px;
-
+    border-radius: .5em;
+    margin: 0.5em;
+    padding: 0.2em;
+    background-color: lightgray;
     text-align: end;
+    font-family: monospace;
 }
 
 button {
