--- a/style.css
+++ b/style.css
@@ -12,22 +12,27 @@
     justify-content: center;
     align-items: center;
 
-    width: 10em;
+    width: 9em;
     height: auto;
     margin: auto;
     padding: 0.5em;
     border: solid black .01em;
+    border-radius: 0.5em;
 }
 
 .display {
     width: 10em;
-    height: 5em;
+    height: 3em;
     border-radius: .5em;
     margin: 0.5em;
     padding: 0.2em;
     background-color: lightgray;
     text-align: end;
     font-family: monospace;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 button {
@@ -37,4 +42,15 @@ button {
     margin: 0.1em;
     border-radius: 2em;
     border-style: hidden;
+}
+
+#ac,
+#equal {
+    background-color: lightpink;
+}
+
+.number,
+#decimal,
+#del {
+    background-color: lightgrey;
 }
