--- a/style.css
+++ b/style.css
@@ -12,41 +12,85 @@
     justify-content: center;
     align-items: center;
 
-    width: 9em;
-    height: auto;
+    width: auto;
+    aspect-ratio: 2/3;
     margin: auto;
     padding: 0.5em;
     border: solid black .01em;
     border-radius: 0.5em;
 }
 
-.display {
-    width: 10em;
-    height: 3em;
-    border-radius: .5em;
-    margin: 0.5em;
-    padding: 0.2em;
-    background-color: lightgray;
-    text-align: end;
-    font-family: monospace;
-
+.display,
+.keypad {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
+    margin: 0.5em;
+}
+
+.display {
+    flex-grow: 1;
+    width: 95%;
+    aspect-ratio: 20 / 1;
+    border-radius: 5%;
+    padding: 0.2em;
+    background-color: lightgray;
+    font-family: monospace;
+    font-size: 10cqw;
+}
+
+/* Allow input to overflow on the left without complications */
+#inputContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    overflow: auto;
+}
+
+/* Remove display scrollbar */
+#inputContainer::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+}
+
+#inputContainer {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+#ans {
+    text-align: right;
+}
+
+.keypad {
+    flex: 2;
+}
+
+.row {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    align-content: stretch;
 }
 
 button {
-    width: 2em;
-    height: 2em;
-    padding: 0.1em;
-    margin: 0.1em;
-    border-radius: 2em;
+    flex: 1;
+    width: 23%;
+    margin: 0.3%;
+    border-radius: 30%;
     border-style: hidden;
+    text-align: center;
+    font-size: 10cqw;
 }
 
-#ac,
-#equal {
+#ac {
     background-color: lightpink;
+}
+
+#equal {
+    background-color: lightgreen;
 }
 
 .number,
